Moved some files around. A bit more testing. Fixed d6 bug(s)...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,22 @@ project(G4SSG)
 set(COBOL_SOURCE WRAPPER.cob
     MAIN.cob
     DICER*.cob DICEN*.cob ?D6.cob ALTERVA?.cob
-    ORBITSEP.cob
+    ORBIT*.cob
+)
+set(TEST1_SOURCE test/VARIATST.cob
+    ALTERVA?.cob
+)
+set(TEST2_SOURCE test/ORBITST1.cob
+    ORBITDET.cob
+    ?D6.cob
 )
 
 set(COBOL_COMPILER cobc)
 set(COBOL_FLAGS -x)
 set(COBOL_DEBUG )
 set(OUT_EXE bin/g4ssg)
+set(TEST1_EXE bin/vartest)
+set(TEST2_EXE bin/orbtest)
 
 add_custom_command(
     OUTPUT ${OUT_EXE}
@@ -22,4 +31,28 @@ add_custom_command(
 add_custom_target(
     build_cobol ALL
     DEPENDS ${OUT_EXE}
+)
+
+add_custom_command(
+    OUTPUT ${TEST1_EXE}
+    COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST1_EXE} ${TEST1_SOURCE}
+    DEPENDS ${TEST1_SOURCE}
+    COMMENT "Compiling test 1 ..."
+)
+
+add_custom_target(
+    build_cobol_test1 ALL
+    DEPENDS ${TEST1_EXE}
+)
+
+add_custom_command(
+    OUTPUT ${TEST2_EXE}
+    COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST2_EXE} ${TEST2_SOURCE}
+    DEPENDS ${TEST2_SOURCE}
+    COMMENT "Compiling test 2 ..."
+)
+
+add_custom_target(
+    build_cobol_test2 ALL
+    DEPENDS ${TEST2_EXE}
 )
