some filename changes & initial copybooking.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,30 @@
 cmake_minimum_required(VERSION 3.10)
 project(G4SSG)
 
-set(COBOL_SOURCE WRAPPER.cob
-    MAIN.cob
-    sub/rng/*.cob
-    sub/ORBIT*.cob
+set(MAIN_SOURCE WRAPPER.cbl
+    cbl/MAIN.cbl
+    cbl/rng/*.cbl
+    cbl/ORBIT*.cbl cbl/PLGG.cbl
 )
-set(TEST1_SOURCE test/VARIATST.cob
-    sub/rng/ALTERVA?.cob
-)
-set(TEST2_SOURCE test/ORBITST1.cob
-    sub/ORBITDET.cob
-    sub/rng/?D6.cob
-)
-set(TEST3_SOURCE test/ORBITST2.cob
-    sub/ORBITLIM.cob
-    sub/rng/?D6.cob
-)
+set(TEST1_SOURCE test/VARIATST.cbl cbl/rng/ALTERVA?.cbl)
+set(TEST2_SOURCE test/ORBITDET.cbl cbl/ORBITDET.cbl cbl/rng/?D6.cbl)
+set(TEST3_SOURCE test/ORBITLIM.cbl cbl/ORBITLIM.cbl cbl/rng/?D6.cbl)
+set(TEST4_SOURCE test/ORBITSPC.cbl cbl/ORBITSPC.cbl cbl/rng/ALTERVA1.cbl cbl/rng/?D6.cbl)
 
 set(COBOL_COMPILER cobc)
-set(COBOL_FLAGS -x)
+set(COBOL_FLAGS -x -Icbl/cpy)
 set(COBOL_DEBUG )
 set(OUT_EXE bin/g4ssg)
+
 set(TEST1_EXE bin/testvar)
 set(TEST2_EXE bin/testorbd)
 set(TEST3_EXE bin/testorbl)
+set(TEST4_EXE bin/testorbs)
 
 add_custom_command(
     OUTPUT ${OUT_EXE}
-    COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${OUT_EXE} ${COBOL_SOURCE}
-    DEPENDS ${COBOL_SOURCE}
+    COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${OUT_EXE} ${MAIN_SOURCE}
+    DEPENDS ${MAIN_SOURCE}
     COMMENT "Compiling G4SSG ..."
 )
 
@@ -42,7 +37,7 @@ add_custom_command(
     OUTPUT ${TEST1_EXE}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST1_EXE} ${TEST1_SOURCE}
     DEPENDS ${TEST1_SOURCE}
-    COMMENT "Compiling test 1 ..."
+    COMMENT "Compiling test ${TEST1_EXE} ..."
 )
 
 add_custom_target(
@@ -54,7 +49,7 @@ add_custom_command(
     OUTPUT ${TEST2_EXE}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST2_EXE} ${TEST2_SOURCE}
     DEPENDS ${TEST2_SOURCE}
-    COMMENT "Compiling test 2 ..."
+    COMMENT "Compiling test ${TEST2_EXE} ..."
 )
 
 add_custom_target(
@@ -66,10 +61,22 @@ add_custom_command(
     OUTPUT ${TEST3_EXE}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST3_EXE} ${TEST3_SOURCE}
     DEPENDS ${TEST3_SOURCE}
-    COMMENT "Compiling test 3 ..."
+    COMMENT "Compiling test ${TEST3_EXE} ..."
 )
 
 add_custom_target(
     build_cobol_test3 ALL
     DEPENDS ${TEST3_EXE}
+)
+
+add_custom_command(
+    OUTPUT ${TEST4_EXE}
+    COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST4_EXE} ${TEST4_SOURCE}
+    DEPENDS ${TEST4_SOURCE}
+    COMMENT "Compiling test ${TEST4_EXE} ..."
+)
+
+add_custom_target(
+    build_cobol_test4 ALL
+    DEPENDS ${TEST4_EXE}
 )
