Orbital zones. Fixed an error in OECC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set(MAIN_SOURCE WRAPPER.cbl
     cbl/D*.cbl
     cbl/O*.cbl
 )
+set(CPY_DEPS cbl/cpy/*.cpy)
 set(MAIN_EXE g4ssg)
 set(MAIN_PATH ${CMAKE_CURRENT_BINARY_DIR}/${MAIN_EXE})
 
@@ -24,7 +25,7 @@ set(MAIN_PATH ${CMAKE_CURRENT_BINARY_DIR}/${MAIN_EXE})
 add_custom_command(
     OUTPUT ${MAIN_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${MAIN_PATH} ${MAIN_SOURCE}
-    DEPENDS ${MAIN_SOURCE}
+    DEPENDS ${MAIN_SOURCE} ${CPY_DEPS}
     COMMENT "Compiling main application (${MAIN_EXE}) ..."
 )
 add_custom_target(build_cobol ALL DEPENDS ${MAIN_PATH})
@@ -38,7 +39,7 @@ set(TEST_DLUM_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_DLUM_EXE})
 add_custom_command(
     OUTPUT ${TEST_DLUM_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_DLUM_PATH} ${TEST_DLUM_SRC}
-    DEPENDS ${TEST_DLUM_SRC}
+    DEPENDS ${TEST_DLUM_SRC} ${CPY_DEPS}
     COMMENT "Compiling test: ${TEST_DLUM_EXE}"
     VERBATIM
 )
@@ -54,7 +55,7 @@ set(TEST_DSEQ_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_DSEQ_EXE})
 add_custom_command(
     OUTPUT ${TEST_DSEQ_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_DSEQ_PATH} ${TEST_DSEQ_SRC}
-    DEPENDS ${TEST_DSEQ_SRC}
+    DEPENDS ${TEST_DSEQ_SRC} ${CPY_DEPS}
     COMMENT "Compiling test: ${TEST_DSEQ_EXE}"
     VERBATIM
 )
@@ -70,7 +71,7 @@ set(TEST_OECC_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_OECC_EXE})
 add_custom_command(
     OUTPUT ${TEST_OECC_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_OECC_PATH} ${TEST_OECC_SRC}
-    DEPENDS ${TEST_OECC_SRC}
+    DEPENDS ${TEST_OECC_SRC} ${CPY_DEPS}
     COMMENT "Compiling test: ${TEST_OECC_EXE}"
     VERBATIM
 )
@@ -86,9 +87,25 @@ set(TEST_OSEP_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_OSEP_EXE})
 add_custom_command(
     OUTPUT ${TEST_OSEP_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_OSEP_PATH} ${TEST_OSEP_SRC}
-    DEPENDS ${TEST_OSEP_SRC}
+    DEPENDS ${TEST_OSEP_SRC} ${CPY_DEPS}
     COMMENT "Compiling test: ${TEST_OSEP_EXE}"
     VERBATIM
 )
 add_custom_target(build_${TEST_OSEP_EXE} ALL DEPENDS ${TEST_OSEP_PATH})
 add_test(NAME TestOSep COMMAND ${TEST_OSEP_PATH})
+
+#
+# ORBZ testing.
+#
+set(TEST_ORBZ_SRC test/ORBZ.cbl cbl/ORBZ.cbl)
+set(TEST_ORBZ_EXE torbz)
+set(TEST_ORBZ_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_ORBZ_EXE})
+add_custom_command(
+    OUTPUT ${TEST_ORBZ_PATH}
+    COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_ORBZ_PATH} ${TEST_ORBZ_SRC}
+    DEPENDS ${TEST_ORBZ_SRC} ${CPY_DEPS}
+    COMMENT "Compiling test: ${TEST_ORBZ_EXE}"
+    VERBATIM
+)
+add_custom_target(build_${TEST_ORBZ_EXE} ALL DEPENDS ${TEST_ORBZ_PATH})
+add_test(NAME TestOZone COMMAND ${TEST_ORBZ_PATH})
