--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,19 +9,23 @@ set(COBOL_COMPILER cobc)
 set(COBOL_FLAGS -x -Icbl/cpy)
 set(COBOL_DEBUG )
 
+set(CPY_DIR cbl/cpy)
+set(CPY_DEPS ${CPY_DIR}/*.cpy)
+set(STAR_CPY_DEPS ${CPY_DIR}/STAR*.cpy ${CPY_DIR}/ORBZONE.cpy ${CPY_DIR}/GGA.cpy)
+
+#
+# Main App.
+#
 set(MAIN_SOURCE WRAPPER.cbl
     cbl/MAIN.cbl
     cbl/rng/*.cbl
     cbl/D*.cbl
     cbl/O*.cbl
+    cbl/P*.cbl
+    cbl/X*.cbl
 )
-set(CPY_DEPS cbl/cpy/*.cpy)
 set(MAIN_EXE g4ssg)
 set(MAIN_PATH ${CMAKE_CURRENT_BINARY_DIR}/${MAIN_EXE})
-
-#
-# Main App.
-#
 add_custom_command(
     OUTPUT ${MAIN_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${MAIN_PATH} ${MAIN_SOURCE}
@@ -39,7 +43,7 @@ set(TEST_DLUM_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_DLUM_EXE})
 add_custom_command(
     OUTPUT ${TEST_DLUM_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_DLUM_PATH} ${TEST_DLUM_SRC}
-    DEPENDS ${TEST_DLUM_SRC} ${CPY_DEPS}
+    DEPENDS ${TEST_DLUM_SRC} cbl/cpy/STARSTG.cpy cbl/cpy/STLREVO.cpy
     COMMENT "Compiling test: ${TEST_DLUM_EXE}"
     VERBATIM
 )
@@ -55,7 +59,7 @@ set(TEST_DSEQ_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_DSEQ_EXE})
 add_custom_command(
     OUTPUT ${TEST_DSEQ_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_DSEQ_PATH} ${TEST_DSEQ_SRC}
-    DEPENDS ${TEST_DSEQ_SRC} ${CPY_DEPS}
+    DEPENDS ${TEST_DSEQ_SRC}  cbl/cpy/STARSTG.cpy cbl/cpy/STLREVO.cpy
     COMMENT "Compiling test: ${TEST_DSEQ_EXE}"
     VERBATIM
 )
@@ -71,7 +75,7 @@ set(TEST_OECC_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_OECC_EXE})
 add_custom_command(
     OUTPUT ${TEST_OECC_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_OECC_PATH} ${TEST_OECC_SRC}
-    DEPENDS ${TEST_OECC_SRC} ${CPY_DEPS}
+    DEPENDS ${TEST_OECC_SRC} cbl/cpy/ORBSEP.cpy
     COMMENT "Compiling test: ${TEST_OECC_EXE}"
     VERBATIM
 )
@@ -87,7 +91,7 @@ set(TEST_OSEP_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_OSEP_EXE})
 add_custom_command(
     OUTPUT ${TEST_OSEP_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_OSEP_PATH} ${TEST_OSEP_SRC}
-    DEPENDS ${TEST_OSEP_SRC} ${CPY_DEPS}
+    DEPENDS ${TEST_OSEP_SRC} cbl/cpy/ORBSEP.cpy cbl/cpy/ORBSEPV.cpy
     COMMENT "Compiling test: ${TEST_OSEP_EXE}"
     VERBATIM
 )
@@ -103,7 +107,7 @@ set(TEST_ORBZ_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_ORBZ_EXE})
 add_custom_command(
     OUTPUT ${TEST_ORBZ_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_ORBZ_PATH} ${TEST_ORBZ_SRC}
-    DEPENDS ${TEST_ORBZ_SRC} ${CPY_DEPS}
+    DEPENDS ${TEST_ORBZ_SRC} ${STAR_CPY_DEPS}
     COMMENT "Compiling test: ${TEST_ORBZ_EXE}"
     VERBATIM
 )
@@ -119,7 +123,7 @@ set(TEST_PGGA_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_PGGA_EXE})
 add_custom_command(
     OUTPUT ${TEST_PGGA_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_PGGA_PATH} ${TEST_PGGA_SRC}
-    DEPENDS ${TEST_PGGA_SRC} ${CPY_DEPS}
+    DEPENDS ${TEST_PGGA_SRC} ${STAR_CPY_DEPS}
     COMMENT "Compiling test: ${TEST_PGGA_EXE}"
     VERBATIM
 )
