Moving stuff. Refactoring/speeding up dice rolling, etc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CURRENT_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/bin")
 
 set(CPY_DIR cpy)
 set(CPY_DEPS ${CPY_DIR}/*.cpy)
-set(RNG_DEPS cbl/rng/?D6.cbl)
+set(RNG_DEPS cbl/rng/ALTERVA?.cbl)
 
 set(COBOL_COMPILER cobc)
 set(COBOL_FLAGS -x -I${CPY_DIR})
