Some refactoring and issue fixes. Initial impl. of orbital separation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.19)
 project(G4SSG)
 
 enable_testing()
 
+set(CMAKE_BUILD_PARALLEL_LEVEL 8)
 set(CMAKE_CURRENT_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/bin")
 
 set(CPY_DIR cpy)
@@ -19,8 +20,9 @@ set(COBOL_DEBUG )
 set(MAIN_SOURCE WRAPPER.cbl
     cbl/MAIN.cbl
     ${RNG_DEPS}
+    cbl/ORBSEP.cbl
     cbl/RNDSMASS.cbl
-    cbl/STRFMT*.cbl
+    cbl/STRFMT.cbl
     cbl/STLR*.cbl
     cbl/STAR*.cbl
 )
@@ -33,6 +35,12 @@ add_custom_command(
     COMMENT "Compiling main application (${MAIN_EXE}) ..."
 )
 add_custom_target(build_cobol ALL DEPENDS ${MAIN_PATH})
+add_custom_target(
+    run
+    COMMAND ${MAIN_PATH}
+    DEPENDS build_cobol
+    COMMENT "GENERATING A NEW STAR SYSTEM. Hold on to your hats! Here we go …"
+)
 
 #
 # Some foobar string testing.
@@ -81,3 +89,19 @@ add_custom_command(
 )
 add_custom_target(build_${TEST_STARIDX_EXE} ALL DEPENDS ${TEST_STARIDX_PATH})
 add_test(NAME Test_stellar_mass_index COMMAND ${TEST_STARIDX_PATH})
+
+#
+# Orbital separation …
+#
+set(TEST_ORBSEP_SRC test/ORBSEP.cbl cbl/ORBSEP.cbl ${RNG_DEPS})
+set(TEST_ORBSEP_EXE torbsep)
+set(TEST_ORBSEP_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_ORBSEP_EXE})
+add_custom_command(
+    OUTPUT ${TEST_ORBSEP_PATH}
+    COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_ORBSEP_PATH} ${TEST_ORBSEP_SRC}
+    DEPENDS ${TEST_ORBSEP_SRC} ${CPY_DIR}/STARSEP.cpy
+    COMMENT "Compiling test: ${TEST_ORBSEP_EXE}"
+    VERBATIM
+)
+add_custom_target(build_${TEST_ORBSEP_EXE} ALL DEPENDS ${TEST_ORBSEP_PATH})
+add_test(NAME "TEST Orbital Separation" COMMAND ${TEST_ORBSEP_PATH})
