Various things en masse...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CURRENT_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/bin")
 
 set(CPY_DIR cpy)
 set(CPY_DEPS ${CPY_DIR}/*.cpy)
+set(TEST_DEPS ${CPY_DIR}/TESTENV.cpy)
 set(RNG_DEPS cbl/rng/ALTERVA?.cbl)
 
 set(COBOL_COMPILER cobc)
@@ -20,7 +21,7 @@ set(COBOL_DEBUG )
 set(MAIN_SOURCE WRAPPER.cbl
     cbl/MAIN.cbl
     ${RNG_DEPS}
-    cbl/ORBSEP.cbl
+    cbl/ORB*.cbl
     cbl/RNDSMASS.cbl
     cbl/STRFMT.cbl
     cbl/STLR*.cbl
@@ -51,7 +52,7 @@ set(TEST_STRFMT_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_STRFMT_EXE})
 add_custom_command(
     OUTPUT ${TEST_STRFMT_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_STRFMT_PATH} ${TEST_STRFMT_SRC}
-    DEPENDS ${TEST_STRFMT_SRC}
+    DEPENDS ${TEST_STRFMT_SRC} ${TEST_DEPS}
     COMMENT "Compiling test: ${TEST_STRFMT_EXE}"
     VERBATIM
 )
@@ -67,7 +68,7 @@ set(TEST_STLRAGE_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_STLRAGE_EXE})
 add_custom_command(
     OUTPUT ${TEST_STLRAGE_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_STLRAGE_PATH} ${TEST_STLRAGE_SRC}
-    DEPENDS ${TEST_STLRAGE_SRC}
+    DEPENDS ${TEST_STLRAGE_SRC} ${TEST_DEPS}
     COMMENT "Compiling test: ${TEST_STLRAGE_EXE}"
     VERBATIM
 )
@@ -83,7 +84,7 @@ set(TEST_STARIDX_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_STARIDX_EXE})
 add_custom_command(
     OUTPUT ${TEST_STARIDX_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_STARIDX_PATH} ${TEST_STARIDX_SRC}
-    DEPENDS ${TEST_STARIDX_SRC}
+    DEPENDS ${TEST_STARIDX_SRC} ${TEST_DEPS}
     COMMENT "Compiling test: ${TEST_STARIDX_EXE}"
     VERBATIM
 )
@@ -99,7 +100,7 @@ set(TEST_ORBSEP_PATH ${CMAKE_CURRENT_BINARY_DIR}/${TEST_ORBSEP_EXE})
 add_custom_command(
     OUTPUT ${TEST_ORBSEP_PATH}
     COMMAND ${COBOL_COMPILER} ${COBOL_FLAGS} ${COBOL_DEBUG} -o ${TEST_ORBSEP_PATH} ${TEST_ORBSEP_SRC}
-    DEPENDS ${TEST_ORBSEP_SRC} ${CPY_DIR}/STARSEP.cpy
+    DEPENDS ${TEST_ORBSEP_SRC} ${TEST_DEPS} ${CPY_DIR}/SEPCATEG.cpy
     COMMENT "Compiling test: ${TEST_ORBSEP_EXE}"
     VERBATIM
 )
